--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency><!--页面模板依赖-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -97,6 +101,15 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		 <!-- bootstrap -->  
+        <dependency>  
+            <groupId>org.webjars</groupId>  
+            <artifactId>bootstrap</artifactId>  
+            </dependency>  
+        <dependency>  
+            <groupId>org.webjars</groupId>  
+            <artifactId>jquery</artifactId>  
+            </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
