--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//resources/templates/article/article.html=UTF-8
+encoding//resources/templates/article/writeArticle.html=UTF-8
 encoding//resources/templates/common/head.html=UTF-8
 encoding//resources/templates/common/index-back.html=UTF-8
 encoding//resources/templates/common/index.html=UTF-8
